--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 			    
 			 	<section class="text-center">
 			 		<hr>
-			 		<button type="button" class="btn btn-primary" onclick="window.location.href = 'form.html';">Find out more</button>
+			 		<a href="https://mailchi.mp/24df81b4885f/biryanisignup ">
+			 			<button type="button" class="btn btn-primary">Find out more
+			 			</button>
+			 		</a>
 			 	</section>	
 			</div>   
 	    </div>
